# ai-native-org-playbook

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_CANDIDATE.md  VALIDATION.md  mkdocs.yml  pyproject.toml
agent_roles/: README.md  analytics_agent.md  chief_of_staff_agent.md  compliance_agent.md  design_review_agent.md  finance_analyst_agent.md  hiring_agent.md  incident_agent.md  knowledge_agent.md  memory_agent.md  planning_agent.md  product_feedback_agent.md  research_agent.md  role_coverage_matrix.md  sales_research_agent.md  support_agent.md  workflow_orchestration_agent.md
departments/: README.md  agent_coverage_matrix.md  comparison_matrix.md  customer_support.md  design.md  engineering.md  finance.md  governance_by_department.md  hr.md  legal_compliance.md  marketing.md  memory_by_department.md  operations.md  product.md  research.md  sales.md
docs/: agent_roles.md  badges.md  cli_reference.md  consulting_guide.md  departments.md  examples_gallery.md  frameworks.md  index.md  limitations.md  memory_governance.md  organization_assessment.md  product_readiness.md  quickstart.md  release_checklist.md  release_notes_v0_1_0.md  roadmap.md  simulators.md  tools.md  tutorial_path.md  workflows.md
examples/: agent_role_chief_of_staff.md  agent_role_incident.md  agent_role_sales_research.md  cli_smoke_commands.md  department_redesign_engineering.md  department_redesign_sales.md  department_redesign_support.md  governance_vendor_onboarding.md  maturity_scores.json  memory_correction_flow.md  pilot_candidate.json  readiness_scores.json  (+4 more)
(+168 files in other folders)
